infra/k8s/deployment-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: music-db
  namespace: music-app
spec:
  selector:
    matchLabels:
      app: music-db
  template:
    metadata:
      labels:
        app: music-db
    spec:
      containers:
        - name: mariadb
          image: mariadb:11
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: music-db-pvc
