infra/k8s/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: music-web
  namespace: music-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: music-web
  template:
    metadata:
      labels:
        app: music-web
    spec:
      containers:
        - name: web
          image: stefanstoyanovpro/music-web:latest
          ports:
            - containerPort: 80
