infra/k8s/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: music-db
  namespace: music-app
spec:
  ports:
    - port: 3306
  selector:
    app: music-db
  clusterIP: None
