infra/k8s/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: music-web
  namespace: music-app
spec:
  selector:
    app: music-web
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
